# NeoMatrix-using-Embedded-Rust

./: Cargo.toml  README.md
src/: animations.rs  main.rs
